--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<h1>Hello!</h1>
+<html>
+
+  <body onload="get()">
+    <p id="savedText"> </p>
+    <p id="openedText"> </p>
+  
+    <input type="text" id = "input"/>
+    <button onclick = "save()"> SAVE </button>
+  
+  </body>
+  
+  <script>
+    
+    var storedItem = localStorage.getItem("storedItem");
+    
+    function save(){
+      var Item = document.getElementById("input").value;
+      localStorage.setItem("storedItem",Item);
+      document.getElementById("savedText").innerHTML = item + " SaVED";
+    }
+    function get() {
+      localStorage.getItem("storedItem");
+      document.getElementById("openedText").innerHTML = storedItem + " OPENED";
+    }
+</html>
